src/index.css
:root {
  /* Colours */
  --clr-primary: #000;
  --clr-secondary: #ffffff;
  /* Font family */
  --ff: "Space Grotesk", sans-serif;
  /*  Font weight */
  --fw-regular: 400;
  --fw-medium: 500;
  --fw-bold: 700;
  /* Font size */
  --fs-200: 1.3rem;
  --fs-400: 2rem;
  --ls: -0.09em;
}

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
* {
  margin: 0;
  padding: 0;
  font: inherit;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul,
ol,
li {
  list-style: none;
}

button {
  all: unset;
  cursor: pointer;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

html,
body {
  height: 100%;
}

/* Set core body defaults */
body {
  text-rendering: optimizeSpeed;
  line-height: 1.5;
  font-family: var(--ff);
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  -webkit-text-decoration-skip: ink;
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture,
svg {
  max-width: 100%;
  display: block;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}
.tx-primary {
  color: var(--clr-secondary);
}

.tx-secondary {
  color: var(--clr-primary);
}

.tx-r {
  font-weight: var(--fw-regular);
}

.tx-m {
  font-weight: var(--fw-medium);
}

.tx-b {
  font-weight: var(--fw-bold);
}

.tx-s {
  font-size: var(--fs-200);
}

.tx-l {
  font-size: var(--fs-400);
}

.ls {
  letter-spacing: var(--ls);
}

body {
  background-color: var(--clr-primary);
  display: grid;
  place-items: center;
  overflow: hidden;
}

.dash {
  width: 160px;
  height: 4px;
  background: var(--clr-secondary);
}

.header {
  margin-bottom: 1.56rem;
}

li {
  margin-bottom: 20px;
}

button {
  display: grid;
  place-items: center;
  font-size: 1.25rem;
  width: 200px;
  height: 55px;
  background-color: var(--clr-secondary);
  border-radius: 8px;
  transition: 1s;
}

button:hover {
  border-radius: 20px;
  background-color: rgb(246, 254, 91);
  transition: 1s;
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@-webkit-keyframes rotate {
  from {
    -webkit-transform: rotate(0deg);
  }
  to {
    -webkit-transform: rotate(360deg);
  }
}

.load {
  display: grid;
  place-items: center;
  width: 50px;
  height: 50px;
  margin: 110px auto 0;
  border: solid 5px #ffffff;
  border-radius: 50%;
  border-right-color: transparent;
  border-bottom-color: transparent;
  -webkit-transition: all 0.5s ease-in;
  -webkit-animation-name: rotate;
  -webkit-animation-duration: 1s;
  -webkit-animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;

  transition: all 0.5s ease-in;
  animation-name: rotate;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
}

.spinner {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#bloa {
  position: absolute;
  z-index: -2;
  background-color: #ffffff;
  height: 500px;
  aspect-ratio: 1;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;

  background: linear-gradient(
    90deg,
    rgba(252, 176, 69, 1) 0%,
    rgba(131, 58, 180, 1) 100%
  );
  animation: rotate2 10s infinite;
  filter: blur(200px);
  opacity: 50%;
}

@keyframes rotate2 {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.main {
  width: 600px;
}

.tx-sx {
  font-size: 1rem;
}

@media (max-width: 600px) {
  #blob {
    display: hidden;
  }
  body {
    padding: 39px;
  }
  h1 {
    width: 20px;
    line-height: 4rem;
  }
  .md-text {
    font-size: 4rem;
  }
  .dash {
    margin-top: 20px;
    width: 272px;
    height: 9px;
    background: var(--clr-secondary);
  }
  button {
    margin-top: 4rem;
    height: 64px;
    width: 312px;
  }
  .header {
    margin-bottom: 3.9rem;
  }
  .main {
    width: auto;
  }
}

